--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
     <title>🥁 Rhythm Generator</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://unpkg.com/vexflow/releases/vexflow-min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/tone"></script>
 </head>
 <body>
     <div class="container">
         <h1>Generate a Rhythm!</h1>
         <button id="generate-btn">Generate Rhythm</button>
         <div id="output"></div>
+        <button id="listen-btn" disabled>Listen</button>
     </div>
     <script src="script.js"></script>
 </body>
