--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>🥁 Rhythm Generator</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://unpkg.com/vexflow/releases/vexflow-min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/tone"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vexflow@4.0.3/build/vexflow-min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.39/Tone.min.js"></script>
 </head>
 <body>
     <div class="container">
